# serializer version: 1
# name: TestTrajectoryDescribe.test_describe_output_snapshot[datetime]
  '''
  ,n_sequences,intervals_length,intervals_n_unique_entities,intervals_temporal_span,intervals_mean_duration,intervals_median_duration,intervals_duration_std,events_length,events_n_unique_entities,events_temporal_span,events_median_gap,events_gap_std,states_length,states_n_unique_entities,states_temporal_span,states_mean_duration,states_median_duration,states_duration_std,states_n_transitions
  0,3,8,8,122 days 23:59:59,24 days 17:59:59,24 days 23:59:59,3 days 19:23:21.398173,8,8,95 days 00:00:00,8 days 00:00:00,10 days 18:48:21.779387,8,8,95 days 00:00:00,13 days 13:42:51.428571,8 days 00:00:00,10 days 18:48:21.779387,6
  
  '''
# ---
# name: TestTrajectoryDescribe.test_describe_output_snapshot[timestep]
  '''
  ,n_sequences,intervals_length,intervals_n_unique_entities,intervals_temporal_span,intervals_mean_duration,intervals_median_duration,intervals_duration_std,events_length,events_n_unique_entities,events_temporal_span,events_median_gap,events_gap_std,states_length,states_n_unique_entities,states_temporal_span,states_mean_duration,states_median_duration,states_duration_std,states_n_transitions
  0,3,8,8,122.99998842592595,24.74998842592595,24.99998842592595,3.8078865529319543,8,8,95.0,8.0,10.783585409580354,8,8,95.0,13.571428571428571,8.0,10.783585409580354,6
  
  '''
# ---
# name: TestTrajectoryPoolDescribe.test_describe_output_snapshot[datetime]
  '''
  ,id,n_sequences,intervals_length,intervals_n_unique_entities,intervals_temporal_span,intervals_mean_duration,intervals_median_duration,intervals_duration_std,events_length,events_n_unique_entities,events_temporal_span,events_median_gap,events_gap_std,states_length,states_n_unique_entities,states_temporal_span,states_mean_duration,states_median_duration,states_duration_std,states_n_transitions
  0,1,3,8,8,122 days 23:59:59,24 days 17:59:59,24 days 23:59:59,3 days 19:23:21.398173,8,8,95 days 00:00:00,8 days 00:00:00,10 days 18:48:21.779387,8,8,95 days 00:00:00,13 days 13:42:51.428571,8 days 00:00:00,10 days 18:48:21.779387,6
  1,2,3,6,6,126 days 23:59:59,19 days 23:59:59,18 days 23:59:59,7 days 07:03:07.172195,6,6,98 days 00:00:00,21 days 00:00:00,9 days 10:47:48.571348,6,6,98 days 00:00:00,19 days 14:24:00,21 days 00:00:00,9 days 10:47:48.571348,4
  2,3,3,6,6,156 days 23:59:59,19 days 07:59:59,19 days 23:59:59,6 days 11:17:26.502538,6,6,144 days 00:00:00,27 days 00:00:00,14 days 00:35:58.074864,6,6,144 days 00:00:00,28 days 19:12:00,27 days 00:00:00,14 days 00:35:58.074864,4
  3,4,3,4,4,89 days 23:59:59,21 days 11:59:59,22 days 11:59:59,9 days 00:53:13.442595,4,4,73 days 00:00:00,28 days 00:00:00,10 days 00:23:58.801995,4,4,73 days 00:00:00,24 days 08:00:00,28 days 00:00:00,10 days 00:23:58.801995,2
  4,5,3,4,4,83 days 23:59:59,22 days 05:59:59,22 days 11:59:59,7 days 22:22:05.032375,4,4,54 days 00:00:00,19 days 00:00:00,12 days 12:43:08.897042,4,4,54 days 00:00:00,18 days 00:00:00,19 days 00:00:00,12 days 12:43:08.897042,2
  5,6,3,3,3,60 days 23:59:59,19 days 23:59:59,22 days 23:59:59,6 days 01:59:10.682617,3,3,48 days 00:00:00,24 days 00:00:00,0 days 00:00:00,3,3,48 days 00:00:00,24 days 00:00:00,24 days 00:00:00,0 days 00:00:00,1
  6,7,3,3,3,51 days 23:59:59,22 days 15:59:59,27 days 23:59:59,10 days 02:47:01.876156,3,3,24 days 00:00:00,12 days 00:00:00,1 days 09:56:28.051789,3,3,24 days 00:00:00,12 days 00:00:00,12 days 00:00:00,1 days 09:56:28.051789,1
  7,8,3,3,3,69 days 23:59:59,23 days 15:59:59,22 days 23:59:59,4 days 00:59:41.442805,3,3,42 days 00:00:00,21 days 00:00:00,16 days 23:17:36.621468,3,3,42 days 00:00:00,21 days 00:00:00,21 days 00:00:00,16 days 23:17:36.621468,1
  8,9,3,4,4,40 days 23:59:59,19 days 05:59:59,19 days 11:59:59,7 days 06:35:06.801872,4,4,15 days 00:00:00,5 days 00:00:00,2 days 00:00:00,4,4,15 days 00:00:00,5 days 00:00:00,5 days 00:00:00,2 days 00:00:00,2
  9,10,3,7,7,165 days 23:59:59,19 days 13:42:50.428571,19 days 23:59:59,6 days 20:27:08.416306,7,7,139 days 00:00:00,25 days 00:00:00,13 days 16:30:59.998478,7,7,139 days 00:00:00,23 days 04:00:00,25 days 00:00:00,13 days 16:30:59.998478,5
  10,11,3,6,6,128 days 23:59:59,20 days 11:59:59,21 days 23:59:59,7 days 02:53:21.976589,6,6,106 days 00:00:00,21 days 00:00:00,7 days 00:20:33.028802,6,6,106 days 00:00:00,21 days 04:48:00,21 days 00:00:00,7 days 00:20:33.028802,4
  11,12,3,8,8,197 days 23:59:59,21 days 08:59:59,22 days 23:59:59,6 days 02:13:57.688620,8,8,173 days 00:00:00,25 days 00:00:00,11 days 09:53:33.271426,8,8,173 days 00:00:00,24 days 17:08:34.285714,25 days 00:00:00,11 days 09:53:33.271426,6
  12,13,3,6,6,97 days 23:59:59,17 days 11:59:59,17 days 23:59:59,4 days 23:16:40.176991,6,6,88 days 00:00:00,17 days 00:00:00,4 days 23:31:08.530106,6,6,88 days 00:00:00,17 days 14:24:00,17 days 00:00:00,4 days 23:31:08.530106,4
  13,14,3,6,6,122 days 23:59:59,22 days 15:59:59,22 days 23:59:59,2 days 10:07:51.192475,6,6,104 days 00:00:00,23 days 00:00:00,7 days 05:23:56.262964,6,6,104 days 00:00:00,20 days 19:12:00,23 days 00:00:00,7 days 05:23:56.262964,4
  14,15,3,8,8,151 days 23:59:59,23 days 11:59:59,23 days 23:59:59,5 days 10:11:43.646851,8,8,123 days 00:00:00,21 days 00:00:00,8 days 05:50:23.143203,8,8,123 days 00:00:00,17 days 13:42:51.428571,21 days 00:00:00,8 days 05:50:23.143203,6
  15,16,3,7,7,154 days 23:59:59,23 days 03:25:41.857142,21 days 23:59:59,6 days 20:12:07.078433,7,7,125 days 00:00:00,18 days 12:00:00,15 days 04:06:35.544697,7,7,125 days 00:00:00,20 days 20:00:00,18 days 12:00:00,15 days 04:06:35.544697,5
  16,17,3,6,6,142 days 23:59:59,18 days 11:59:59,14 days 23:59:59,7 days 05:33:53.904329,6,6,113 days 00:00:00,26 days 00:00:00,7 days 12:52:40.293629,6,6,113 days 00:00:00,22 days 14:24:00,26 days 00:00:00,7 days 12:52:40.293629,4
  17,18,3,6,6,141 days 23:59:59,20 days 07:59:59,22 days 23:59:59,8 days 02:46:47.552726,6,6,131 days 00:00:00,27 days 00:00:00,3 days 13:31:44.192891,6,6,131 days 00:00:00,26 days 04:48:00,27 days 00:00:00,3 days 13:31:44.192891,4
  18,19,3,6,6,152 days 23:59:59,20 days 19:59:59,22 days 23:59:59,8 days 02:37:55.057355,6,6,131 days 00:00:00,26 days 00:00:00,14 days 22:57:30.576320,6,6,131 days 00:00:00,26 days 04:48:00,26 days 00:00:00,14 days 22:57:30.576320,4
  19,20,3,8,8,137 days 23:59:59,17 days 11:59:59,16 days 23:59:59,5 days 10:49:33.411442,8,8,122 days 00:00:00,18 days 00:00:00,9 days 00:22:50.221327,8,8,122 days 00:00:00,17 days 10:17:08.571428,18 days 00:00:00,9 days 00:22:50.221327,6
  20,21,3,4,4,103 days 23:59:59,20 days 11:59:59,18 days 23:59:59,6 days 00:39:54.470016,4,4,75 days 00:00:00,19 days 00:00:00,12 days 03:58:21.365235,4,4,75 days 00:00:00,25 days 00:00:00,19 days 00:00:00,12 days 03:58:21.365235,2
  21,22,3,7,7,136 days 23:59:59,20 days 23:59:59,21 days 23:59:59,5 days 00:47:50.463471,7,7,115 days 00:00:00,21 days 00:00:00,11 days 06:51:23.110303,7,7,115 days 00:00:00,19 days 04:00:00,21 days 00:00:00,11 days 06:51:23.110303,5
  22,23,3,7,7,207 days 23:59:59,23 days 03:25:41.857142,22 days 23:59:59,2 days 14:37:41.355573,7,7,186 days 00:00:00,30 days 00:00:00,8 days 20:30:18.211547,7,7,186 days 00:00:00,31 days 00:00:00,30 days 00:00:00,8 days 20:30:18.211547,5
  23,24,3,3,3,49 days 23:59:59,19 days 15:59:59,15 days 23:59:59,9 days 01:46:13.877115,3,3,37 days 00:00:00,18 days 12:00:00,16 days 06:19:22.595573,3,3,37 days 00:00:00,18 days 12:00:00,18 days 12:00:00,16 days 06:19:22.595573,1
  24,25,3,5,5,108 days 23:59:59,18 days 19:11:59,21 days 23:59:59,4 days 20:50:18.059526,5,5,86 days 00:00:00,23 days 00:00:00,7 days 14:15:09.259193,5,5,86 days 00:00:00,21 days 12:00:00,23 days 00:00:00,7 days 14:15:09.259193,3
  25,26,3,8,8,137 days 23:59:59,19 days 23:59:59,19 days 23:59:59,4 days 00:51:12.060415,8,8,116 days 00:00:00,18 days 00:00:00,6 days 19:52:03.152380,8,8,116 days 00:00:00,16 days 13:42:51.428571,18 days 00:00:00,6 days 19:52:03.152380,6
  26,27,3,6,6,118 days 23:59:59,20 days 03:59:59,19 days 11:59:59,6 days 05:02:41.854775,6,6,104 days 00:00:00,18 days 00:00:00,9 days 10:02:01.052941,6,6,104 days 00:00:00,20 days 19:12:00,18 days 00:00:00,9 days 10:02:01.052941,4
  27,28,3,3,3,56 days 23:59:59,22 days 23:59:59,26 days 23:59:59,7 days 19:26:45.571998,3,3,37 days 00:00:00,18 days 12:00:00,14 days 20:22:54.543784,3,3,37 days 00:00:00,18 days 12:00:00,18 days 12:00:00,14 days 20:22:54.543784,1
  28,29,3,7,7,142 days 23:59:59,20 days 06:51:24.714285,19 days 23:59:59,5 days 00:34:12.268083,7,7,120 days 00:00:00,20 days 12:00:00,11 days 13:24:18.428092,7,7,120 days 00:00:00,20 days 00:00:00,20 days 12:00:00,11 days 13:24:18.428092,5
  29,30,3,7,7,144 days 23:59:59,23 days 03:25:41.857142,23 days 23:59:59,4 days 04:19:51.172174,7,7,118 days 00:00:00,21 days 12:00:00,12 days 04:37:46.050710,7,7,118 days 00:00:00,19 days 16:00:00,21 days 12:00:00,12 days 04:37:46.050710,5
  30,31,3,8,8,164 days 23:59:59,25 days 14:59:59,27 days 11:59:59,4 days 04:57:39.944737,8,8,145 days 00:00:00,27 days 00:00:00,13 days 11:23:46.546436,8,8,145 days 00:00:00,20 days 17:08:34.285714,27 days 00:00:00,13 days 11:23:46.546436,6
  31,32,3,4,4,98 days 23:59:59,23 days 05:59:59,24 days 23:59:59,5 days 17:41:43.136968,4,4,84 days 00:00:00,28 days 00:00:00,2 days 00:00:00,4,4,84 days 00:00:00,28 days 00:00:00,28 days 00:00:00,2 days 00:00:00,2
  32,33,3,3,3,51 days 23:59:59,14 days 15:59:59,14 days 23:59:59,2 days 12:23:55.231735,3,3,37 days 00:00:00,18 days 12:00:00,19 days 02:12:18.699151,3,3,37 days 00:00:00,18 days 12:00:00,18 days 12:00:00,19 days 02:12:18.699151,1
  33,34,3,8,8,148 days 23:59:59,19 days 11:59:59,20 days 11:59:59,6 days 12:35:32.216064,8,8,130 days 00:00:00,15 days 00:00:00,8 days 13:55:25.330549,8,8,130 days 00:00:00,18 days 13:42:51.428571,15 days 00:00:00,8 days 13:55:25.330549,6
  34,35,3,3,3,44 days 23:59:59,19 days 15:59:59,16 days 23:59:59,5 days 12:10:54.095285,3,3,29 days 00:00:00,14 days 12:00:00,6 days 08:44:06.233050,3,3,29 days 00:00:00,14 days 12:00:00,14 days 12:00:00,6 days 08:44:06.233050,1
  35,36,3,6,6,123 days 23:59:59,18 days 23:59:59,17 days 23:59:59,6 days 11:32:15.996342,6,6,113 days 00:00:00,21 days 00:00:00,13 days 00:16:36.481047,6,6,113 days 00:00:00,22 days 14:24:00,21 days 00:00:00,13 days 00:16:36.481047,4
  36,37,3,3,3,59 days 23:59:59,25 days 07:59:59,24 days 23:59:59,3 days 12:17:06.828082,3,3,35 days 00:00:00,17 days 12:00:00,6 days 08:44:06.233050,3,3,35 days 00:00:00,17 days 12:00:00,17 days 12:00:00,6 days 08:44:06.233050,1
  37,38,3,4,4,72 days 23:59:59,22 days 05:59:59,23 days 23:59:59,8 days 01:22:12.401199,4,4,48 days 00:00:00,13 days 00:00:00,13 days 17:56:43.620132,4,4,48 days 00:00:00,16 days 00:00:00,13 days 00:00:00,13 days 17:56:43.620132,2
  38,39,3,5,5,97 days 23:59:59,21 days 14:23:59,20 days 23:59:59,2 days 19:01:42.067956,5,5,73 days 00:00:00,13 days 00:00:00,16 days 23:56:28.220026,5,5,73 days 00:00:00,18 days 06:00:00,13 days 00:00:00,16 days 23:56:28.220026,3
  39,40,3,5,5,130 days 23:59:59,20 days 14:23:59,21 days 23:59:59,2 days 19:01:42.067956,5,5,111 days 00:00:00,29 days 00:00:00,9 days 06:53:24.386827,5,5,111 days 00:00:00,27 days 18:00:00,29 days 00:00:00,9 days 06:53:24.386827,3
  40,41,3,5,5,104 days 23:59:59,17 days 14:23:59,17 days 23:59:59,4 days 00:53:44.953235,5,5,84 days 00:00:00,17 days 00:00:00,10 days 05:32:10.132985,5,5,84 days 00:00:00,21 days 00:00:00,17 days 00:00:00,10 days 05:32:10.132985,3
  41,42,3,3,3,48 days 23:59:59,17 days 23:59:59,18 days 23:59:59,3 days 14:31:59.630200,3,3,35 days 00:00:00,17 days 12:00:00,12 days 00:29:58.440206,3,3,35 days 00:00:00,17 days 12:00:00,17 days 12:00:00,12 days 00:29:58.440206,1
  42,43,3,3,3,60 days 23:59:59,19 days 07:59:59,19 days 23:59:59,9 days 00:26:38.357287,3,3,33 days 00:00:00,16 days 12:00:00,7 days 18:40:34.284839,3,3,33 days 00:00:00,16 days 12:00:00,16 days 12:00:00,7 days 18:40:34.284839,1
  43,44,3,3,3,59 days 23:59:59,19 days 15:59:59,21 days 23:59:59,5 days 20:37:37.799939,3,3,38 days 00:00:00,19 days 00:00:00,8 days 11:38:48.310734,3,3,38 days 00:00:00,19 days 00:00:00,19 days 00:00:00,8 days 11:38:48.310734,1
  44,45,3,3,3,53 days 23:59:59,21 days 07:59:59,21 days 23:59:59,8 days 00:29:57.662333,3,3,32 days 00:00:00,16 days 00:00:00,18 days 09:14:04.673257,3,3,32 days 00:00:00,16 days 00:00:00,16 days 00:00:00,18 days 09:14:04.673257,1
  45,46,3,7,7,118 days 23:59:59,16 days 17:08:33.285714,15 days 23:59:59,5 days 21:06:50.168627,7,7,109 days 00:00:00,14 days 12:00:00,13 days 16:52:01.727142,7,7,109 days 00:00:00,18 days 04:00:00,14 days 12:00:00,13 days 16:52:01.727142,5
  46,47,3,6,6,121 days 23:59:59,18 days 15:59:59,16 days 23:59:59,7 days 10:44:32.181216,6,6,92 days 00:00:00,18 days 00:00:00,9 days 05:39:33.112328,6,6,92 days 00:00:00,18 days 09:36:00,18 days 00:00:00,9 days 05:39:33.112328,4
  47,48,3,6,6,91 days 23:59:59,19 days 07:59:59,18 days 11:59:59,5 days 11:09:39.491295,6,6,67 days 00:00:00,8 days 00:00:00,10 days 18:49:19.007469,6,6,67 days 00:00:00,13 days 09:36:00,8 days 00:00:00,10 days 18:49:19.007469,4
  48,49,3,4,4,37 days 23:59:59,21 days 23:59:59,23 days 11:59:59,8 days 00:59:50.673512,4,4,19 days 00:00:00,6 days 00:00:00,2 days 12:23:55.231735,4,4,19 days 00:00:00,6 days 08:00:00,6 days 00:00:00,2 days 12:23:55.231735,2
  49,50,3,6,6,118 days 23:59:59,17 days 07:59:59,17 days 23:59:59,4 days 00:47:48.098970,6,6,104 days 00:00:00,19 days 00:00:00,12 days 04:39:44.145666,6,6,104 days 00:00:00,20 days 19:12:00,19 days 00:00:00,12 days 04:39:44.145666,4
  50,51,3,,,,,,,,,,,,,,,,,,
  51,52,3,,,,,,,,,,,,,,,,,,
  52,53,3,,,,,,,,,,,,,,,,,,
  53,54,3,,,,,,,,,,,,,,,,,,
  54,55,3,,,,,,,,,,,,,,,,,,
  55,56,3,,,,,,,,,,,,,,,,,,
  56,57,3,,,,,,,,,,,,,,,,,,
  57,58,3,,,,,,,,,,,,,,,,,,
  58,59,3,,,,,,,,,,,,,,,,,,
  59,60,3,,,,,,,,,,,,,,,,,,
  
  '''
# ---
# name: TestTrajectoryPoolDescribe.test_describe_output_snapshot[timestep]
  '''
  ,id,n_sequences,intervals_length,intervals_n_unique_entities,intervals_temporal_span,intervals_mean_duration,intervals_median_duration,intervals_duration_std,events_length,events_n_unique_entities,events_temporal_span,events_median_gap,events_gap_std,states_length,states_n_unique_entities,states_temporal_span,states_mean_duration,states_median_duration,states_duration_std,states_n_transitions
  0,1,3,8,8,122.99998842592595,24.74998842592595,24.99998842592595,3.8078865529319543,8,8,95.0,8.0,10.783585409580354,8,8,95.0,13.571428571428571,8.0,10.783585409580354,6
  1,2,3,6,6,126.99998842592595,19.999988425925924,18.99998842592592,7.293833011524195,6,6,98.0,21.0,9.44986772394196,6,6,98.0,19.6,21.0,9.44986772394196,4
  2,3,3,6,6,156.99998842592595,19.333321759259274,19.999988425925935,6.470445631227153,6,6,144.0,27.0,14.024977718342372,6,6,144.0,28.8,27.0,14.024977718342372,4
  3,4,3,4,4,89.99998842592595,21.49998842592595,22.49998842592595,9.03696114115064,4,4,73.0,28.0,10.016652800877813,4,4,73.0,24.333333333333332,28.0,10.016652800877813,2
  4,5,3,4,4,83.99998842592595,22.24998842592595,22.49998842592595,7.932002689527196,4,4,54.0,19.0,12.529964086141668,4,4,54.0,18.0,19.0,12.529964086141668,2
  5,6,3,3,3,60.99998842592595,19.99998842592595,22.99998842592595,6.082762530298219,3,3,48.0,24.0,0.0,3,3,48.0,24.0,24.0,0.0,1
  6,7,3,3,3,51.99998842592592,22.66665509259259,27.99998842592592,10.115993936995679,3,3,24.0,12.0,1.4142135623730951,3,3,24.0,12.0,12.0,1.4142135623730951,1
  7,8,3,3,3,69.99998842592595,23.666655092592617,22.99998842592595,4.04145188432738,3,3,42.0,21.0,16.97056274847714,3,3,42.0,21.0,21.0,16.97056274847714,1
  8,9,3,4,4,40.99998842592595,19.24998842592595,19.49998842592595,7.274384280931732,4,4,15.0,5.0,2.0,4,4,15.0,5.0,5.0,2.0,2
  9,10,3,7,7,165.99998842592595,19.571416997354522,19.99998842592595,6.852180744287249,7,7,139.0,25.0,13.688194426828787,7,7,139.0,23.166666666666668,25.0,13.688194426828787,5
  10,11,3,6,6,128.99998842592595,20.49998842592595,21.99998842592595,7.12039324756716,6,6,106.0,21.0,7.014271166700072,6,6,106.0,21.2,21.0,7.014271166700073,4
  11,12,3,8,8,197.99998842592595,21.37498842592595,22.99998842592595,6.093028803476971,8,8,173.0,25.0,11.412190641506793,8,8,173.0,24.714285714285715,25.0,11.412190641506792,6
  12,13,3,6,6,97.99998842592595,17.49998842592595,17.99998842592595,4.969909455915671,6,6,88.0,17.0,4.979959839195493,6,6,88.0,17.6,17.0,4.979959839195493,4
  13,14,3,6,6,122.99998842592595,22.666655092592592,22.99998842592592,2.4221202832779842,6,6,104.0,23.0,7.224956747275378,6,6,104.0,20.8,23.0,7.224956747275377,4
  14,15,3,8,8,151.99998842592595,23.49998842592595,23.99998842592595,5.42481072744215,8,8,123.0,21.0,8.243323416704026,8,8,123.0,17.571428571428573,21.0,8.243323416704026,6
  15,16,3,7,7,154.99998842592592,23.142845568783063,21.99998842592592,6.841748592978537,7,7,125.0,18.5,15.171244730300367,7,7,125.0,20.833333333333332,18.5,15.171244730300367,5
  16,17,3,6,6,142.99998842592595,18.499988425925938,14.999988425925935,7.231873892705826,6,6,113.0,26.0,7.536577472566709,6,6,113.0,22.6,26.0,7.536577472566709,4
  17,18,3,6,6,141.99998842592595,20.33332175925928,22.99998842592595,8.115828156551041,6,6,131.0,27.0,3.5637059362410923,6,6,131.0,26.2,27.0,3.5637059362410928,4
  18,19,3,6,6,152.99998842592595,20.83332175925928,22.99998842592595,8.109665015687558,6,6,131.0,26.0,14.956603892595405,6,6,131.0,26.2,26.0,14.956603892595405,4
  19,20,3,8,8,137.99998842592595,17.499988425925935,16.999988425925935,5.451081150953964,8,8,122.0,18.0,9.015859043136947,8,8,122.0,17.428571428571427,18.0,9.015859043136949,6
  20,21,3,4,4,103.99998842592592,20.49998842592592,18.99998842592592,6.027713773341708,4,4,75.0,19.0,12.165525060596439,4,4,75.0,25.0,19.0,12.165525060596439,2
  21,22,3,7,7,136.99998842592592,20.99998842592592,21.99998842592592,5.033222956847166,7,7,115.0,21.0,11.285684147036308,7,7,115.0,19.166666666666668,21.0,11.285684147036308,5
  22,23,3,7,7,207.99998842592595,23.142845568783077,22.99998842592592,2.609506430251484,7,7,186.0,30.0,8.854377448471462,7,7,186.0,31.0,30.0,8.854377448471462,5
  23,24,3,3,3,49.99998842592592,19.66665509259259,15.99998842592592,9.073771725877467,3,3,37.0,18.5,16.263455967290593,3,3,37.0,18.5,18.5,16.263455967290593,1
  24,25,3,5,5,108.99998842592595,18.79998842592595,21.99998842592595,4.868264577855234,5,5,86.0,23.0,7.593857166596345,5,5,86.0,21.5,23.0,7.593857166596345,3
  25,26,3,8,8,137.99998842592595,19.99998842592595,19.99998842592595,4.035556254807296,8,8,116.0,18.0,6.827814263660635,8,8,116.0,16.571428571428573,18.0,6.827814263660635,6
  26,27,3,6,6,118.99998842592592,20.16665509259259,19.499988425925924,6.210206652492867,6,6,104.0,18.0,9.418067742376884,6,6,104.0,20.8,18.0,9.418067742376884,4
  27,28,3,3,3,56.99998842592595,22.99998842592595,26.99998842592595,7.810249675906654,3,3,37.0,18.5,14.849242404917497,3,3,37.0,18.5,18.5,14.849242404917497,1
  28,29,3,7,7,142.99998842592595,20.285702711640223,19.99998842592592,5.0237531028201685,7,7,120.0,20.5,11.55854662143991,7,7,120.0,20.0,20.5,11.55854662143991,5
  29,30,3,7,7,144.99998842592595,23.142845568783066,23.99998842592592,4.180453381654974,7,7,118.0,21.5,12.192894105447921,7,7,118.0,19.666666666666668,21.5,12.192894105447921,5
  30,31,3,8,8,164.99998842592595,25.62498842592595,27.49998842592595,4.206712323350454,8,8,145.0,27.0,13.474844287465015,8,8,145.0,20.714285714285715,27.0,13.474844287465016,6
  31,32,3,4,4,98.99998842592595,23.24998842592594,24.999988425925935,5.737304826019496,4,4,84.0,28.0,2.0,4,4,84.0,28.0,28.0,2.0,2
  32,33,3,3,3,51.99998842592592,14.666655092592586,14.99998842592592,2.5166114784235836,3,3,37.0,18.5,19.091883092036785,3,3,37.0,18.5,18.5,19.091883092036785,1
  33,34,3,8,8,148.99998842592595,19.499988425925928,20.49998842592595,6.524678426668137,8,8,130.0,15.0,8.580154288767051,8,8,130.0,18.571428571428573,15.0,8.580154288767051,6
  34,35,3,3,3,44.99998842592595,19.666655092592617,16.99998842592595,5.507570547286102,3,3,29.0,14.5,6.363961030678928,3,3,29.0,14.5,14.5,6.363961030678928,1
  35,36,3,6,6,123.99998842592595,18.999988425925945,17.99998842592595,6.480740698407852,6,6,113.0,21.0,13.011533345459327,6,6,113.0,22.6,21.0,13.011533345459329,4
  36,37,3,3,3,59.99998842592592,25.333321759259253,24.99998842592592,3.511884584284246,3,3,35.0,17.5,6.363961030678928,3,3,35.0,17.5,17.5,6.363961030678928,1
  37,38,3,4,4,72.99998842592592,22.24998842592592,23.99998842592592,8.05708797684788,4,4,48.0,13.0,13.74772708486752,4,4,48.0,16.0,13.0,13.74772708486752,2
  38,39,3,5,5,97.99998842592595,21.59998842592595,20.99998842592595,2.792848008753788,5,5,73.0,13.0,16.99754884289693,5,5,73.0,18.25,13.0,16.99754884289693,3
  39,40,3,5,5,130.99998842592595,20.599988425925925,21.99998842592592,2.7928480087537864,5,5,111.0,29.0,9.287087810503355,5,5,111.0,27.75,29.0,9.287087810503355,3
  40,41,3,5,5,104.99998842592592,17.599988425925922,17.99998842592592,4.03732584763727,5,5,84.0,17.0,10.23067283548187,5,5,84.0,21.0,17.0,10.23067283548187,3
  41,42,3,3,3,48.99998842592595,17.99998842592595,18.99998842592595,3.605551275463989,3,3,35.0,17.5,12.020815280171307,3,3,35.0,17.5,17.5,12.020815280171307,1
  42,43,3,3,3,60.99998842592592,19.333321759259253,19.99998842592592,9.018499505645789,3,3,33.0,16.5,7.7781745930520225,3,3,33.0,16.5,16.5,7.7781745930520225,1
  43,44,3,3,3,59.99998842592592,19.66665509259259,21.99998842592592,5.859465277082315,3,3,38.0,19.0,8.48528137423857,3,3,38.0,19.0,19.0,8.48528137423857,1
  44,45,3,3,3,53.99998842592595,21.33332175925928,21.99998842592595,8.020806277010642,3,3,32.0,16.0,18.384776310850235,3,3,32.0,16.0,16.0,18.384776310850235,1
  45,46,3,7,7,118.99998842592595,16.71427414021166,15.99998842592592,5.879747322073337,7,7,109.0,14.5,13.702797767852617,7,7,109.0,18.166666666666668,14.5,13.702797767852617,5
  46,47,3,6,6,121.99998842592592,18.66665509259259,16.999988425925924,7.447594690010101,6,6,92.0,18.0,9.235799911215054,6,6,92.0,18.4,18.0,9.235799911215056,4
  47,48,3,6,6,91.99998842592592,19.33332175925926,18.499988425925924,5.465040408511784,6,6,67.0,8.0,10.784247771634329,6,6,67.0,13.4,8.0,10.784247771634329,4
  48,49,3,4,4,37.99998842592592,21.99998842592592,23.49998842592592,8.04155872120988,4,4,19.0,6.0,2.516611478423583,4,4,19.0,6.333333333333333,6.0,2.516611478423583,2
  49,50,3,6,6,118.99998842592595,17.33332175925928,17.99998842592595,4.033195589934446,6,6,104.0,19.0,12.19426094521517,6,6,104.0,20.8,19.0,12.19426094521517,4
  50,51,3,,,,,,,,,,,,,,,,,,
  51,52,3,,,,,,,,,,,,,,,,,,
  52,53,3,,,,,,,,,,,,,,,,,,
  53,54,3,,,,,,,,,,,,,,,,,,
  54,55,3,,,,,,,,,,,,,,,,,,
  55,56,3,,,,,,,,,,,,,,,,,,
  56,57,3,,,,,,,,,,,,,,,,,,
  57,58,3,,,,,,,,,,,,,,,,,,
  58,59,3,,,,,,,,,,,,,,,,,,
  59,60,3,,,,,,,,,,,,,,,,,,
  
  '''
# ---
